<resources>
    <string name="app_name">My Cat</string>
    <string name="cat_name">Привет! Меня зовут Эми</string>
    <string name="cat_breed">Порода: Шотландская прямоухая (скоттиш-страйт)</string>
    <string name="button_info_of_breed">Больше информации о породе</string>
    <string name="info_of_breed">Кошка шотландская прямоухая короткошерстная получила свое
        признание благодаря, во-первых, своей внешности, которая напоминают плюшевого медвежонка,
        во-вторых, неплохому характеру, который выгодно отличается от многих других пород.
        Плюс шотландские кошки просты в содержании. Это одна из самых удобных для квартиры пород кошек.
        А еще шотландская кошка удобна для большой семьи, потому что неплохо относится к шумным
        компаниям и не скрывается в неизвестном направлении при виде ребенка, хотя, конечно,
        может дать ему отпор при слишком навязчивых ласках. В то же время эта порода кошек не подойдет
        тем, кого целыми днями нет дома, потому что шотландцы очень привязчивы и нуждаются в общении.
        Также они не подходят в случае аллергии на шерсть, ведь эта кошка не лысая и шерсти,
        хоть и короткой, у нее много. Не подойдет шотландец и таким людям, которым жизненно
        необходимо, чтобы кошка постоянно сидела на руках. Шотландцы умеет охотиться и может поймать,
        например, мышь. Но ловить крыс и делать это постоянно для пропитания плюшевый зверек не станет.
        Разве что вы собираетесь морить его голодом. Шотландцы не подходят и тем, кто хочет приобрести
        кошку ради дрессуры. Дело в том, что скоттиш-страйты, как и их вислоухие собратья, не очень-то
        поддаются дрессировке. Не потому, что глупые, а потом, что не считают нужным выполнять команды.
        Надрессировать такого кота можно, но только если вы сумеете показать, что выполнение трюка
        выгодно в первую очередь именно ему, а не вам. В частности, кошки могут выполнять команды,
        потому что это дополнительное общение, которое они так любят. Характер у скоттишей хороший,
        уравновешенный, но слегка капризный и демонстративный. И еще эти кошки: настоящие оптимисты,
        не злопамятны, отходчивы и добродушны.</string>
    <string name="tv_scottish_strayt">Шотландская прямоухая (скоттиш-страйт)</string>
    <string name="photo_of_my_cat">Photo of my cat</string>
    <string name="my_hobbies">Мои хобби:</string>
    <string name="content_description_hobby_image">hobby image</string>
</resources>
